--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -1,13 +1,122 @@
 ---
-title: Hello World
-description: Your first document
+title: LuxTable
+description: A powerful, flexible, and easy-to-use React data grid
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+import { LuxTableDemo, LuxTableCopyableDemo, LuxTableFilterDemo } from "../../components/lux-table-demo";
 
-## What is Next?
+# LuxTable
+
+A powerful React data grid built on top of **TanStack Table**. Simple API, beautiful defaults, fully customizable.
+
+## Features
+
+- 🚀 **Zero Config** - Just pass your data and columns, it works
+- 🎨 **Built-in Cell Components** - StatusCell, ProgressCell, DateCell, CopyableCell and more
+- 📦 **Auto Column Generation** - Generate columns from JSON data automatically
+- 🔄 **Pagination & Sorting** - Built-in with single prop
+- 📋 **Click to Copy** - One-click cell value copying
+- 🔍 **Column Filtering** - Filter data per column
+- 🎯 **TypeScript First** - Full type safety
+- 🌙 **Dark Mode Ready** - Beautiful in light and dark themes
+
+## Live Demo
+
+<LuxTableDemo />
+
+## Column Filtering
+
+Enable column-level filtering with `options.filtering`. Use dropdown filters for columns with limited values!
+
+<LuxTableFilterDemo />
+
+```tsx
+import { LuxTable, createColumnHelper } from "luxtable";
+
+const columnHelper = createColumnHelper<Employee>();
+
+const columns = [
+  // Text filter (default)
+  columnHelper.accessor("name", { header: "Name" }),
+  
+  // Dropdown filter for limited value columns
+  columnHelper.accessor("department", { 
+    header: "Department",
+    meta: { filterVariant: "select" }, // Dropdown filter!
+  }),
+  
+  columnHelper.accessor("status", { 
+    header: "Status",
+    meta: { filterVariant: "select" }, // Dropdown filter!
+  }),
+];
+
+export default function App() {
+  return (
+    <LuxTable 
+      data={data} 
+      columns={columns} 
+      options={{ filtering: true }}
+    />
+  );
+}
+```
+
+## Click to Copy Feature
+
+Use `CopyableCell` to make any cell value copyable with a single click!
+
+<LuxTableCopyableDemo />
+
+```tsx
+import { LuxTable, createColumnHelper, CopyableCell } from "luxtable";
+
+const columnHelper = createColumnHelper<User>();
+
+const columns = [
+  columnHelper.accessor("email", {
+    header: "Email",
+    cell: (info) => <CopyableCell value={info.getValue()} />,
+  }),
+];
+```
+
+## Quick Install
+
+```bash
+npm install luxtable
+```
+
+## Simple Example
+
+```tsx
+import { LuxTable, createColumnHelper, StatusCell } from "luxtable";
+
+const data = [
+  { name: "John", status: "Active" },
+  { name: "Jane", status: "Pending" },
+];
+
+const columnHelper = createColumnHelper();
+
+const columns = [
+  // No cell needed - auto renders!
+  columnHelper.accessor("name", { header: "Name" }),
+  // Use built-in StatusCell for beautiful badges
+  columnHelper.accessor("status", {
+    header: "Status",
+    cell: (info) => <StatusCell value={info.getValue()} />,
+  }),
+];
+
+export default function App() {
+  return <LuxTable data={data} columns={columns} />;
+}
+```
+
+## What's Next?
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+  <Card title="Quick Start" href="/docs/quick-start" />
+  <Card title="API Reference" href="/docs/api" />
 </Cards>
