--- a/apps/docs/content/docs/column-actions.tr.mdx
+++ b/apps/docs/content/docs/column-actions.tr.mdx
@@ -13,7 +13,9 @@ LuxTable, sıralama ve sütun gizleme gibi yaygın işlemler için her sütun ba
 
 - **Artan Sırala** - A→Z veya 0→9 sırala
 - **Azalan Sırala** - Z→A veya 9→0 sırala
+- **Sıralamayı temizle** - Sıralamayı kaldır (yalnızca sıralandığında görünür)
 - **Sütunu Gizle** - Sütunu görünümden kaldır
+
 
 ```tsx
 import { createColumnHelper } from "luxtable";
@@ -113,5 +115,7 @@ export default function App() {
 | Özellik | Açıklama |
 |---------|----------|
 | **Sıralama** | Tabloyu o sütuna göre sıralamak için "Artan" veya "Azalan"a tıklayın |
+| **Sıralamayı Temizle** | Mevcut sıralamayı kaldırmak için "Sıralamayı temizle"ye tıklayın |
 | **Gizleme** | Sütunu görünümden kaldırmak için "Gizle"ye tıklayın |
 | **Görsel Göstergeler** | Ok ikonları mevcut sıralama yönünü gösterir |
+
