feat: implement LuxTable component with pagination, toolbar, sorting, and API documentation

--- a/apps/docs/content/docs/api-reference.mdx
+++ b/apps/docs/content/docs/api-reference.mdx
@@ -40,6 +40,9 @@ import { LuxTable } from "luxtable";
 | `filtering` | `boolean` | `false` | Enable column filtering |
 | `selection` | `'none' \| 'single' \| 'multiple'` | `'none'` | Row selection mode |
 | `showSelectionCheckbox` | `boolean` | `true` | Show/hide selection checkboxes |
+| `showToolbar` | `boolean` | `false` | Show toolbar with search and controls |
+| `showGlobalSearch` | `boolean` | `true` | Show global search input in toolbar |
+| `showColumnVisibility` | `boolean` | `true` | Show column visibility dropdown in toolbar |
 
 ### Controlled State Props
 
