--- a/apps/docs/content/docs/api-reference.tr.mdx
+++ b/apps/docs/content/docs/api-reference.tr.mdx
@@ -40,6 +40,9 @@ import { LuxTable } from "luxtable";
 | `filtering` | `boolean` | `false` | Sütun filtrelemeyi etkinleştir |
 | `selection` | `'none' \| 'single' \| 'multiple'` | `'none'` | Satır seçim modu |
 | `showSelectionCheckbox` | `boolean` | `true` | Seçim checkbox'larını göster/gizle |
+| `showToolbar` | `boolean` | `false` | Arama ve kontrollerle toolbar'ı göster |
+| `showGlobalSearch` | `boolean` | `true` | Toolbar'da global arama input'unu göster |
+| `showColumnVisibility` | `boolean` | `true` | Toolbar'da sütun görünürlük dropdown'ını göster |
 
 ### Kontrollü Durum Prop'ları
 
